# Atmosphere.BE/Atmosphere.Application/DTO/Mapping/MappingProfile.cs
@@ -8,5 +8,8 @@ public class MappingProfile : Profile
     {
         CreateMap<Core.Models.Device, DeviceDto>();
         CreateMap<Core.Models.Reading, ReadingDto>();
+        CreateMap<Core.Models.BaseUser, BaseUserDto>();
+        CreateMap<Core.Models.User, BaseUserDto>();
+        CreateMap<Core.Models.Device, BaseUserDto>();
     }
 }
